src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Related_to_Opportunity__c</fullName>
        <description>This field sets a 1 if the event is linked to an Opportunity, otherwise 0. Use for analysis only</description>
        <formula>IF( LEFT(WhatId,3)=&quot;006&quot; , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field sets a 1 if the event is linked to an Opportunity, otherwise 0. Use for analysis only</inlineHelpText>
        <label>Related to Opportunity (for analysis)?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBU__c</fullName>
        <label>SBU</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBU_Full_Names</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scientific_Market_Monitoring_D_IT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CFE related to a Scientific Project. Used by DI Italy.</description>
        <inlineHelpText>CFE related to a Scientific Project. Used by DI Italy.</inlineHelpText>
        <label>Scientific Market Monitoring (D-IT)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Calendar_Invites__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Send Calendar Invites flag is used to enable/disable outlook invite process for a particular event.</description>
        <inlineHelpText>Send Calendar Invites flag is used to enable/disable outlook invite process for a particular event.</inlineHelpText>
        <label>Send Calendar Invites</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Survey__c</fullName>
        <label>Send Survey</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Surgical_Guides__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SIMPLANT Surgical Guides</description>
        <label>Surgical Guides</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>System_Presentation_D_DE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>By request from Moritz Hamburger April 2012. Service promoted in Germany.</description>
        <label>System Presentation (D-DE)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Country__c</fullName>
        <label>User Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>DEX</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Holland</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>HQ</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Luxembourg</fullName>
                </value>
                <value>
                    <fullName>Malaysia</fullName>
                </value>
                <value>
                    <fullName>New Zealand</fullName>
                </value>
                <value>
                    <fullName>Norway</fullName>
                </value>
                <value>
                    <fullName>Poland</fullName>
                </value>
                <value>
                    <fullName>Portugal</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>Sweden</fullName>
                </value>
                <value>
                    <fullName>Switzerland</fullName>
                </value>
                <value>
                    <fullName>Thailand</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>Vietnam</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ustomed_D_PL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ustomed (D-PL)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weekday__c</fullName>
        <formula>CASE
     ( 
       MOD(  IF(IsAllDayEvent= true,ActivityDate,DATEValue(ActivityDateTime)) - DATE(1900, 1, 7), 7) ,
 0, &quot;Sunday&quot;, 
 1, &quot;Monday&quot;, 
 2, &quot;Tuesday&quot;, 
 3, &quot;Wednesday&quot;, 
 4, &quot;Thursday&quot;, 
 5, &quot;Friday&quot;, 
 6, &quot;Saturday&quot;,
 &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weekday</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workflow_Run_Time__c</fullName>
        <description>Updated by a workflow, which mainly to touch the event and to fire the trigger.</description>
        <label>Workflow Run Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WrapupTimeInSeconds__c</fullName>
        <label>WrapupTimeInSeconds</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>holdTimeInSeconds__c</fullName>
        <label>holdTimeInSeconds</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ingenius__CallId__c</fullName>
        <description>InGenius Call ID.</description>
        <inlineHelpText>InGenius Call ID.</inlineHelpText>
        <label>CallId</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>new_customer_acquisition_DE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used to track CFEs during new customer acquisition</description>
        <label>New Customer Acquisition (DE)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>origUCID__c</fullName>
        <description>field for the call</description>
        <label>origUCID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ringTimeInSeconds__c</fullName>
        <label>ringTimeInSeconds</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>talkTimeInSeconds__c</fullName>
        <label>talkTimeInSeconds</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time__c</fullName>
        <description>Shows the current local time for the related record (Lead, Contact etc.)</description>
        <formula>IF(ISBLANK(tz__UTC_Offset__c), 
&quot;Unknown&quot;, 
MID( TEXT( NOW()+ tz__UTC_Offset__c /24 ), 6, 2 ) &amp; &quot;/&quot; &amp; 
MID( TEXT( NOW()+ tz__UTC_Offset__c /24 ), 9, 2 ) &amp; &quot;/&quot; &amp; 
LEFT( TEXT( NOW()+ tz__UTC_Offset__c /24 ), 4 ) &amp; &quot; &quot; &amp; 
TEXT( 
IF( 
OR( 
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset__c /24 ), 12, 2 ) ) = 0, 
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset__c /24 ), 12, 2 ) ) = 12 
), 
12, 
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset__c /24 ), 12, 2 ) ) 
- 
IF( 
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset__c /24 ), 12, 2 ) ) &lt; 12, 
0, 
12 
) 
) 
) 
&amp;&quot;:&quot;&amp; 
MID( TEXT( NOW()+ tz__UTC_Offset__c /24 ), 15, 2 ) 
&amp;&quot; &quot;&amp; 
IF( 
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset__c /24 ), 12, 2 ) ) &lt; 12, 
&quot;AM&quot;, 
&quot;PM&quot; 
) 
&amp; &quot; &quot; &amp; 
IF( $Setup.tz__lt_app_settings__c.tz__Abbreviation__c, tz__Timezone__c,&quot;&quot;) 
)</formula>
        <inlineHelpText>Shows the current local time for the related record (Lead, Contact etc.)</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone__c</fullName>
        <description>Timezone abbreviation (PST, EST, etc.).</description>
        <inlineHelpText>Timezone abbreviation (PST, EST, etc.).</inlineHelpText>
        <label>Timezone</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__UTC_Offset__c</fullName>
        <description>Shows the UTC timezone offset for the related record (Lead, Contact etc.).</description>
        <inlineHelpText>Shows the UTC timezone offset for the related record (Lead, Contact etc.).</inlineHelpText>
        <label>UTC Offset</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>Beschwerdemanagement_unbearbeitete</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>notContain</operation>
            <value>F0</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed,Abgeschlossen</value>
        </filters>
        <label>Beschwerden unbearbeitet</label>
        <language>de</language>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Beschwerden_abgeschlossen</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>contains</operation>
            <value>F0</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Completed,Abgeschlossen</value>
        </filters>
        <filters>
            <field>TASK.CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>3/1/2009 12:00 AM</value>
        </filters>
        <label>Beschwerden abgeschlossen</label>
        <language>de</language>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Beschwerden_in_Arbeit</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>startsWith</operation>
            <value>F0</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Not Started,In Progress</value>
        </filters>
        <filters>
            <field>TASK.CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>3/1/2009 12:00 AM</value>
        </filters>
        <label>Beschwerden in Arbeit</label>
        <language>de</language>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Kaisers_Aufgaben</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>TASK.STATUS</columns>
        <columns>Event_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>3/1/2009 12:00 AM</value>
        </filters>
        <label>Beschwerden</label>
        <language>de</language>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>MSCampaignActivitiesUK</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER_ROLE</field>
            <operation>contains</operation>
            <value>UK: Urology</value>
        </filters>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>contains</operation>
            <value>MS Campaign</value>
        </filters>
        <label>MS Campaign Activities (UK)</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>My_Teams_Delegated_Open_Tasks</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Delegated</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Teams Delegated Open Tasks</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>X001_ControlTower_Tasks</fullName>
        <columns>TASK.STATUS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>EVENT.END_DATE_TIME</columns>
        <columns>TASK.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>ctower</value>
        </filters>
        <filters>
            <field>TASK.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Task.Task_DI</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>Open Tasks related to Cases</label>
        <language>en_US</language>
        <sharedTo>
            <role>Service_Complaint</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X001_My_Tasks</fullName>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed,Abgeschlossen</value>
        </filters>
        <filters>
            <field>TASK.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Task.Task_DI</value>
        </filters>
        <label>001. My Open Activities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X001_Mycompleted_Tasks</fullName>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>EVENT.END_DATE_TIME</columns>
        <columns>TASK.PRIORITY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Completed,Abgeschlossen</value>
        </filters>
        <filters>
            <field>TASK.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Task.Task_DI</value>
        </filters>
        <label>001. My Completed Tasks</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X20_Meine_delegierten_Aktivit_ten</fullName>
        <columns>TASK.CREATED_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>ACTIVITY.TASK</columns>
        <filterScope>Delegated</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Not Started,In Progress</value>
        </filters>
        <label>15. Meine delegierten Aufgaben</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>geopointe__Geopointe_Activities_Last_7_Days</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>startsWith</operation>
            <value>Geopointe:</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Geopointe Activities (Last 7 Days)</label>
    </listViews>
    <listViews>
        <fullName>geopointe__Geopointe_Activities_all</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>startsWith</operation>
            <value>Geopointe:</value>
        </filters>
        <label>Geopointe Activities (all)</label>
    </listViews>
    <listViews>
        <fullName>geopointe__Geopointe_Activities_today</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>startsWith</operation>
            <value>Geopointe:</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Geopointe Activities (today)</label>
    </listViews>
    <listViews>
        <fullName>x10MeineAktivitten</fullName>
        <columns>Event_Status__c</columns>
        <filterScope>Mine</filterScope>
        <label>10. Meine Aktivitäten</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>x10Mesactivits</fullName>
        <filterScope>Mine</filterScope>
        <label>10. Mes activités</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>